<resources>
    <string name="app_name">超级计算器</string>

    <!-- 主界面 -->
    <string name="calculator">计算</string>
    <string name="exchange">汇率</string>
    <string name="relation">关系</string>

    <!-- 计算器 -->
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="none"></string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="AC">AC</string>

    <!-- 数字键盘 -->
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>


    <!-- 汇率 -->
    <string name="currency_dialog_title">选择币种</string>
    <string name="currency_dialog_cancel">取消</string>

    <!-- 汇率错误代码 -->
    <string name="error_10001">错误的请求KEY</string>
    <string name="error_10002">该KEY无请求权限</string>
    <string name="error_10003">KEY过期</string>
    <string name="error_10004">错误的OPENID</string>
    <string name="error_10005">应用未审核超时，请提交认证</string>
    <string name="error_10007">未知的请求源</string>
    <string name="error_10008">被禁止的IP</string>
    <string name="error_10009">被禁止的KEY</string>
    <string name="error_10011">当前IP请求超过限制</string>
    <string name="error_10012">请求超过次数限制</string>
    <string name="error_10013">测试KEY超过请求限制</string>
    <string name="error_10014">系统内部异常</string>
    <string name="error_208001">货币兑换名称不能为空</string>
    <string name="error_208002">查询不到汇率相关信息</string>
    <string name="error_208003">网络错误，请重试</string>
    <string name="error_208004">查询不到常用货币相关信息</string>
    <string name="error_208005">不存在的货币种类</string>
    <string name="error_208006">查询不到该货币兑换相关信息</string>

    <!-- 亲戚 -->
    <string name="me">我</string>
    <string name="link">的</string>
    <string name="husband1">丈夫</string>
    <string name="husband2">老公</string>
    <string name="wife1">妻子</string>
    <string name="wife2">老婆</string>
    <string name="father">爸爸</string>
    <string name="mother">妈妈</string>
    <string name="brother1">哥哥</string>
    <string name="brother2">弟弟</string>
    <string name="sister1">姐姐</string>
    <string name="sister2">妹妹</string>
    <string name="son">儿子</string>
    <string name="daughter">女儿</string>
    <string name="father_father">爷爷</string>
    <string name="father_mother">奶奶</string>
    <string name="mother_father">外公</string>
    <string name="mother_mother">外婆</string>
    <string name="son_son">孙子</string>
    <string name="son_daughter">孙女</string>
    <string name="daughter_son">外孙</string>
    <string name="daughter_daughter">外孙女</string>
    <string name="father_in_law_1">公公</string>
    <string name="father_in_law_2">岳父</string>
    <string name="mother_in_law_1">婆婆</string>
    <string name="mother_in_law_2">岳母</string>
    <string name="bro1_in_law_1">大伯子</string>
    <string name="bro2_in_law_1">小叔子</string>
    <string name="bro1_in_law_2">大舅子</string>
    <string name="bro2_in_law_2">小舅子</string>
    <string name="sis1_in_law_1">大姑子</string>
    <string name="sis2_in_law_1">小姑子</string>
    <string name="sis1_in_law_2">大姨子</string>
    <string name="sis2_in_law_2">小姨子</string>
    <string name="father_bro1">伯父</string>
    <string name="father_bro2">叔叔</string>
    <string name="mother_bro1">大舅舅</string>
    <string name="mothter_bro2">小舅舅</string>
    <string name="father_sis1">大姑姑</string>
    <string name="father_sis2">小姑姑</string>
    <string name="mother_sis1">大姨</string>
    <string name="mother_sis2">小姨</string>
    <string name="bro1_wife">嫂子</string>
    <string name="bro2_wife">弟妹</string>
    <string name="sis1_hus">姐夫</string>
    <string name="sis2_hus">妹夫</string>
    <string name="bro_son">侄子</string>
    <string name="bro_daughter">侄女</string>
    <string name="sis_son">外甥</string>
    <string name="sis_daughter">外甥女</string>

    <string name="big_count">再玩就玩坏了！</string>
</resources>













